--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -1182,50 +1182,6 @@
                                 <div class="control-container">
                                     <div class="option-container">
                                         <div class="option-label">
-                                            <div class="option-label-title">
-                                                <span lang="en">Rendering Engine</span>
-                                                <span lang="ja">レンダリングエンジン</span>
-                                                <span lang="kr">Rendering Engine</span>
-                                                <span lang="ru">Rendering Engine</span>
-                                                <span lang="zh-CN">渲染引擎</span>
-                                                <span lang="zh-TW">渲染引擎</span>
-                                                <span class="option-label-id">map.engine</span>
-                                            </div>
-                                            <div class="option-label-description">
-                                                <span lang="en">The library that will be used to render the map.
-                                                    Changing this will require a restart to have an effect.</span>
-                                                <span lang="ja">マップのレンダリング時に使用するレンダリングエンジン。
-                                                    これを変更すると、有効にするために再起動が必要になります。</span>
-                                                <span lang="kr">The library that will be used to render the map.
-                                                    Changing this will require a restart to have an effect.</span>
-                                                <span lang="ru">The library that will be used to render the map.
-                                                    Changing this will require a restart to have an effect.</span>
-                                                <span lang="zh-CN">渲染地图时使用的渲染引擎。
-                                                    更改此项需要重新启动才能生效。</span>
-                                                <span lang="zh-TW">渲染地圖時使用的渲染引擎。
-                                                    更改這項設定需要重新啟動才能生效。</span>
-                                            </div>
-                                        </div>
-                                        <div class="control">
-                                            <select id="map.engine" name="mapengine" onchange="SelectSave('map.engine')">
-                                                <option value="mapbox-gl">Mapbox GL</option>
-                                                <option value="leaflet">Leaflet (LEGACY)</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <button id="MEReloadButton" class="filled-tonal-button setting-button md3-ripple" onclick="restart()" style="display:none; margin-top: 4px;">
-                                        <span class="material-symbols-rounded filled-tonal-button-icon">replay</span>
-                                        <span class="filled-tonal-button-label">
-                                            <span lang="en">Restart</span>
-                                            <span lang="ja">再起動</span>
-                                            <span lang="kr">Restart</span>
-                                            <span lang="ru">Restart</span>
-                                            <span lang="zh-CN">重新啟動</span>
-                                            <span lang="zh-TW">重新啟動</span>
-                                        </span>
-                                    </button>
-                                    <div class="option-container">
-                                        <div class="option-label">
                                             <span class="option-label-title">
                                                 <span lang="en">Auto map zooming</span>
                                                 <span lang="ja">自動地図ズーム</span>
@@ -1275,7 +1231,7 @@
                                                 <span lang="zh-CN">使用动画过渡地图缩放和平移。
                                                     启用此功能将对效能产生重大影响。</span> <!-- LEGACY: Current translation needs to be updated -->
                                                 <span lang="zh-TW">使用動畫過渡地圖縮放和平移。
-                                                    啟用此功能將對效能產生重大影響。(Leaflet)</span>
+                                                    啟用此功能將對效能產生重大影響。</span>
                                             </span>
                                         </div>
                                         <label class="md3 switch">
