--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -3200,7 +3200,7 @@
                                                 <span lang="zh-CN">?</span>
                                                 <span lang="zh-TW">啟用P2P模式，使用 P2P模式 讓 TREM 接收P2P模式。
                                                     如果你遇到了其他模式斷線的問題，請開啟此功能(此功能處於測試階段)。
-                                                    關閉此功能會讓錯誤碼出現4&5純屬正常。</span>
+                                                    關閉此功能會讓錯誤碼出現5純屬正常。</span>
                                             </div>
                                         </div>
                                         <label class="md3 switch">
@@ -4025,6 +4025,47 @@
                                                 <span lang="zh-TW">測試舊警報</span>
                                             </span>
                                         </button>
+                                    </div>
+                                </div>
+                                <div class="control-title">
+                                    <div>
+                                        <span lang="zh-TW">P2P統計資訊</span>
+                                    </div>
+                                </div>
+                                <div class="option-container">
+                                    <div class="option-label">
+                                        <div class="option-label-title">
+                                            <span lang="zh-TW">P2P伺服器資訊</span>
+                                        </div>
+                                        <div class="option-label-description" id="p2p_server_num">
+                                            <span lang="zh-TW">P2P伺服器資訊</span>
+                                        </div>
+                                    </div>
+                                    <div class="control" id="p2p_server">
+                                    </div>
+                                </div>
+                                <div class="option-container">
+                                    <div class="option-label">
+                                        <div class="option-label-title">
+                                            <span lang="zh-TW">P2P-接收資訊</span>
+                                        </div>
+                                        <div class="option-label-description" id="p2p_in_num">
+                                            <span lang="zh-TW">P2P-接收資訊</span>
+                                        </div>
+                                    </div>
+                                    <div class="control" id="p2p_in">
+                                    </div>
+                                </div>
+                                <div class="option-container">
+                                    <div class="option-label">
+                                        <div class="option-label-title">
+                                            <span lang="zh-TW">P2P-發送資訊</span>
+                                        </div>
+                                        <div class="option-label-description"  id="p2p_out_num">
+                                            <span lang="zh-TW">P2P-發送資訊</span>
+                                        </div>
+                                    </div>
+                                    <div class="control" id="p2p_out">
                                     </div>
                                 </div>
                             </div>
