--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -4036,10 +4036,10 @@
                                 <div class="option-container">
                                     <div class="option-label">
                                         <div class="option-label-title">
-                                            <span lang="zh-TW">P2P伺服器資訊</span>
+                                            <span lang="zh-TW">v4伺服器資訊</span>
                                         </div>
                                         <div class="option-label-description" id="p2p_server_num">
-                                            <span lang="zh-TW">P2P伺服器資訊</span>
+                                            <span lang="zh-TW">v4伺服器資訊</span>
                                         </div>
                                     </div>
                                     <div class="control" id="p2p_server">
@@ -4049,10 +4049,10 @@
                                 <div class="option-container">
                                     <div class="option-label">
                                         <div class="option-label-title">
-                                            <span lang="zh-TW">P2P-接收資訊</span>
+                                            <span lang="zh-TW">v4接收資訊</span>
                                         </div>
                                         <div class="option-label-description" id="p2p_in_num">
-                                            <span lang="zh-TW">P2P-接收資訊</span>
+                                            <span lang="zh-TW">v4接收資訊</span>
                                         </div>
                                     </div>
                                     <div class="control" id="p2p_in">
@@ -4062,13 +4062,52 @@
                                 <div class="option-container">
                                     <div class="option-label">
                                         <div class="option-label-title">
-                                            <span lang="zh-TW">P2P-發送資訊</span>
+                                            <span lang="zh-TW">v4發送資訊</span>
                                         </div>
-                                        <div class="option-label-description"  id="p2p_out_num">
-                                            <span lang="zh-TW">P2P-發送資訊</span>
+                                        <div class="option-label-description" id="p2p_out_num">
+                                            <span lang="zh-TW">v4發送資訊</span>
                                         </div>
                                     </div>
                                     <div class="control" id="p2p_out">
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="option-container">
+                                    <div class="option-label">
+                                        <div class="option-label-title">
+                                            <span lang="zh-TW">v6伺服器資訊</span>
+                                        </div>
+                                        <div class="option-label-description" id="p2p_v6_server_num">
+                                            <span lang="zh-TW">v6伺服器資訊</span>
+                                        </div>
+                                    </div>
+                                    <div class="control" id="p2p_v6_server">
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="option-container">
+                                    <div class="option-label">
+                                        <div class="option-label-title">
+                                            <span lang="zh-TW">v6接收資訊</span>
+                                        </div>
+                                        <div class="option-label-description" id="p2p_v6_in_num">
+                                            <span lang="zh-TW">v6接收資訊</span>
+                                        </div>
+                                    </div>
+                                    <div class="control" id="p2p_v6_in">
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="option-container">
+                                    <div class="option-label">
+                                        <div class="option-label-title">
+                                            <span lang="zh-TW">v6發送資訊</span>
+                                        </div>
+                                        <div class="option-label-description" id="p2p_v6_out_num">
+                                            <span lang="zh-TW">v6發送資訊</span>
+                                        </div>
+                                    </div>
+                                    <div class="control" id="p2p_v6_out">
                                     </div>
                                 </div>
                             </div>
