--- a/TREM.Electron/Views/IntensityView.html
+++ b/TREM.Electron/Views/IntensityView.html
@@ -46,7 +46,7 @@
                                                 <span lang="kr">?</span>
                                                 <span lang="ru">?</span>
                                                 <span lang="zh-CN">?</span>
-                                                <span lang="zh-TW">CWB</span>
+                                                <span lang="zh-TW">CWA</span>
                                             </div>
                                         </label>
                                         <label for="intensity" id="intensity-label-palert" class="chip filter md3-ripple" onclick="TREM.Intensity.load(TREM.Intensity.palert)">
