--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -339,12 +339,12 @@
                                     <label for="report-filter-CWB" id="report-label-filter-CWB" class="chip filter md3-ripple">
                                         <input type="checkbox" id="report-filter-CWB" onclick="TREM.Report._handleFilter('filterCWB', this.checked)" checked>
                                         <div class="chip-label">
-                                            <span lang="en">CWB</span>
-                                            <span lang="ja">CWB</span>
-                                            <span lang="kr">CWB</span>
-                                            <span lang="ru">CWB</span>
-                                            <span lang="zh-CN">CWB</span>
-                                            <span lang="zh-TW">CWB</span>
+                                            <span lang="en">CWA</span>
+                                            <span lang="ja">CWA</span>
+                                            <span lang="kr">CWA</span>
+                                            <span lang="ru">CWA</span>
+                                            <span lang="zh-CN">CWA</span>
+                                            <span lang="zh-TW">CWA</span>
                                         </div>
                                     </label>
                                     <label for="report-filter-date" id="report-label-filter-date" class="chip filter label md3-ripple">
