--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -307,20 +307,20 @@
                                         <div class="option-label">
                                             <span class="option-label-title">
                                                 <span lang="en">Central Weather Bureau</span>
-                                                <span lang="ja">中央気象局</span>
+                                                <span lang="ja">中央気象署</span>
                                                 <span lang="kr">대만기상국</span>
                                                 <span lang="ru">Центральное бюро погоды</span>
-                                                <span lang="zh-CN">台湾中央气象局（CWB）</span>
-                                                <span lang="zh-TW">中央氣象局</span>
+                                                <span lang="zh-CN">台湾中央气象署（CWA）</span>
+                                                <span lang="zh-TW">中央氣象署</span>
                                                 <span class="option-label-id">accept.eew.CWB</span>
                                             </span>
                                             <span class="option-label-description">
                                                 <span lang="en">Receive EEW from Central Weather Bureau.</span>
-                                                <span lang="ja">中央気象局 (CWB) から緊急地震速報を受け取る。</span>
-                                                <span lang="kr">대만기상국 (CWB) 의 긴급지진속보를 수신합니다.</span>
-                                                <span lang="ru">Получение Центрального бюро погоды (CWB) раннего предупреждения землетрясений.</span>
-                                                <span lang="zh-CN">接收台湾中央气象局（CWB）强震即时警报。</span>
-                                                <span lang="zh-TW">接收中央氣象局 (CWB) 強震即時警報。</span>
+                                                <span lang="ja">中央気象署 (CWA) から緊急地震速報を受け取る。</span>
+                                                <span lang="kr">대만기상국 (CWA) 의 긴급지진속보를 수신합니다.</span>
+                                                <span lang="ru">Получение Центрального бюро погоды (CWA) раннего предупреждения землетрясений.</span>
+                                                <span lang="zh-CN">接收台湾中央气象署（CWA）强震即时警报。</span>
+                                                <span lang="zh-TW">接收中央氣象署 (CWA) 強震即時警報。</span>
                                             </span>
                                         </div>
                                         <label class="md3 switch">
@@ -768,22 +768,22 @@
                                     <div class="option-container">
                                         <div class="option-label">
                                             <span class="option-label-title">
-                                                <span lang="en">Only Show CWB report</span>
+                                                <span lang="en">Only Show CWA report</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
                                                 <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
                                                 <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-TW">只顯示CWB報告</span>
+                                                <span lang="zh-TW">只顯示CWA報告</span>
 
                                                 <span class="option-label-id">report.onlycwbchangeView</span>
                                             </span>
                                             <span class="option-label-description">
-                                                <span lang="en">Switch screen automatically upon receiving Only CWB earthquake report.</span>
+                                                <span lang="en">Switch screen automatically upon receiving Only CWA earthquake report.</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
                                                 <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
                                                 <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                                <span lang="zh-TW">在收到只有CWB地震報告自動切換畫面。</span>
+                                                <span lang="zh-TW">在收到只有CWA地震報告自動切換畫面。</span>
                                             </span>
                                         </div>
                                         <label class="md3 switch">
@@ -3657,7 +3657,7 @@
                                             </div>
                                             <div class="control">
                                                 <select id="intensity.unit" name="intensity.unit">
-                                                    <option value="cwb">CWB</option>
+                                                    <option value="cwb">CWA</option>
                                                     <option value="palert">P-Alert</option>
                                                     <option value="trem">TREM</option>
                                                 </select>
