--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -336,8 +336,8 @@
                                             <span lang="zh-TW">TREM</span>
                                         </div>
                                     </label>
-                                    <label for="report-filter-CWB" id="report-label-filter-CWB" class="chip filter md3-ripple">
-                                        <input type="checkbox" id="report-filter-CWB" onclick="TREM.Report._handleFilter('filterCWB', this.checked)" checked>
+                                    <label for="report-filter-CWA" id="report-label-filter-CWA" class="chip filter md3-ripple">
+                                        <input type="checkbox" id="report-filter-CWA" onclick="TREM.Report._handleFilter('filterCWA', this.checked)" checked>
                                         <div class="chip-label">
                                             <span lang="en">CWA</span>
                                             <span lang="ja">CWA</span>
