--- a/TREM.Electron/Views/IntensityView.html
+++ b/TREM.Electron/Views/IntensityView.html
@@ -39,7 +39,7 @@
                             <div id="intensity-overview-body">
                                 <div class="report-overview-item">
                                     <div class="report-overview-item-label">
-                                        <label for="intensity" id="intensity-label-cwb" class="chip filter md3-ripple" onclick="TREM.Intensity.load(TREM.Intensity.cwb)">
+                                        <label for="intensity" id="intensity-label-cwa" class="chip filter md3-ripple" onclick="TREM.Intensity.load(TREM.Intensity.cwa)">
                                             <div class="chip-label">
                                                 <span lang="en">?</span>
                                                 <span lang="ja">?</span>
