--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -312,7 +312,7 @@
                                                 <span lang="ru">Центральное бюро погоды</span>
                                                 <span lang="zh-CN">台湾中央气象署（CWA）</span>
                                                 <span lang="zh-TW">中央氣象署</span>
-                                                <span class="option-label-id">accept.eew.CWB</span>
+                                                <span class="option-label-id">accept.eew.CWA</span>
                                             </span>
                                             <span class="option-label-description">
                                                 <span lang="en">Receive EEW from Central Weather Bureau.</span>
@@ -324,7 +324,7 @@
                                             </span>
                                         </div>
                                         <label class="md3 switch">
-                                            <input type="checkbox" id="accept.eew.CWB" onclick="CheckSave('accept.eew.CWB')">
+                                            <input type="checkbox" id="accept.eew.CWA" onclick="CheckSave('accept.eew.CWA')">
                                             <span class="slider">
                                                 <span class="material-symbols-rounded icon">done</span>
                                             </span>
@@ -775,7 +775,7 @@
                                                 <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
                                                 <span lang="zh-TW">只顯示CWA報告</span>
 
-                                                <span class="option-label-id">report.onlycwbchangeView</span>
+                                                <span class="option-label-id">report.onlycwachangeView</span>
                                             </span>
                                             <span class="option-label-description">
                                                 <span lang="en">Switch screen automatically upon receiving Only CWA earthquake report.</span>
@@ -787,7 +787,7 @@
                                             </span>
                                         </div>
                                         <label class="md3 switch">
-                                            <input type="checkbox" id="report.onlycwbchangeView" onclick="CheckSave('report.onlycwbchangeView')">
+                                            <input type="checkbox" id="report.onlycwachangeView" onclick="CheckSave('report.onlycwachangeView')">
                                             <span class="slider">
                                                 <span class="material-symbols-rounded icon">done</span>
                                             </span>
