--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -4031,7 +4031,7 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="control-title">
+                                <!-- <div class="control-title">
                                     <div>
                                         <span lang="zh-TW">測試舊警報</span>
                                     </div>
@@ -4054,7 +4054,7 @@
                                             </span>
                                         </button>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="control-title">
                                     <div>
                                         <span lang="zh-TW">P2P統計資訊</span>
