--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -28,10 +28,10 @@
                         <stop offset="100%" stop-color="#5ea6ed"/>
                       </linearGradient>
                       <clipPath id="loadtext">
-                        <text x="54" y="37" class="loadtext">TREM 臺灣即時地震監測</text>
+                        <text x="54" y="37" class="loadtext">TREMV 臺灣即時地震監測變體</text>
                       </clipPath>
                     </defs>
-                      <text class="loadtext loadtext-stroke" x="54" y="37" clip-path="url(#loadtext)">TREM 臺灣即時地震監測</text>
+                      <text class="loadtext loadtext-stroke" x="54" y="37" clip-path="url(#loadtext)">TREMV 臺灣即時地震監測變體</text>
                       <g id="loadlogo">
                         <ellipse style="fill: url('#loadgrad');" cx="24" cy="30" rx="24" ry="24"></ellipse>
                         <polyline id="loadwave" points="3 30.001 13.5 30.001 17.933 34.667 22.366 16 25.634 43.999 30.067 25.332 34.5 30.001 45 30.001"></polyline>
