--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -3096,17 +3096,17 @@
                                                 <span class="option-label-id">compatibility.hwaccel</span>
                                             </div>
                                             <div class="option-label-description">
-                                                <span lang="en">Turns on Hardware Acceleration, which uses your GPU to make TREM smoother.
+                                                <span lang="en">Turns on Hardware Acceleration, which uses your GPU to make TREMV smoother.
                                                     Turn this off if you are experiencing frame drops.</span>
-                                                <span lang="ja">TREM を快適にするために GPU を使用します。
+                                                <span lang="ja">TREMV を快適にするために GPU を使用します。
                                                     フレームの低下か生じる場合は無効にしてください。</span>
-                                                <span lang="kr">하드웨어 가속을 사용하여 TREM을 원할하게 사용할 수 있습니다.
+                                                <span lang="kr">하드웨어 가속을 사용하여 TREMV을 원할하게 사용할 수 있습니다.
                                                     버벅이거나 문제가 생긴다면 이 기능을 끄세요.</span>
-                                                <span lang="ru">Включает аппаратное ускорение, которое использует ваш GPU для повышения плавности работы TREM
+                                                <span lang="ru">Включает аппаратное ускорение, которое использует ваш GPU для повышения плавности работы TREMV
                                                     Выключите эту функцию, если у вас наблюдаются провалы кадров.</span>
-                                                <span lang="zh-CN">启用硬件加速，使用 GPU 让 TREM 跑得更加流畅。
+                                                <span lang="zh-CN">启用硬件加速，使用 GPU 让 TREMV 跑得更加流畅。
                                                     如果你遇到了卡顿、帧数下降的问题，请关闭此功能。</span>
-                                                <span lang="zh-TW">啟用硬體加速，使用 GPU 讓 TREM 跑得更加順暢。
+                                                <span lang="zh-TW">啟用硬體加速，使用 GPU 讓 TREMV 跑得更加順暢。
                                                     如果你遇到了卡頓、幀數下降的問題，請關閉此功能。</span>
                                             </div>
                                         </div>
@@ -3140,14 +3140,14 @@
                                                 <span class="option-label-id">compatibility.3DAPI</span>
                                             </div>
                                             <div class="option-label-description">
-                                                <span lang="en">Turns on 3D API, which uses your GPU to make TREM smoother.
+                                                <span lang="en">Turns on 3D API, which uses your GPU to make TREMV smoother.
                                                     Turn this off if you are experiencing frame drops.</span>
                                                 <span lang="ja">?</span>
                                                 <span lang="kr">?</span>
                                                 <span lang="ru">?</span>
-                                                <span lang="zh-CN">启用3D API，使用 GPU 让 TREM 跑得更加流畅。
+                                                <span lang="zh-CN">启用3D API，使用 GPU 让 TREMV 跑得更加流畅。
                                                     如果你遇到了卡顿、帧数下降的问题，请关闭此功能。</span>
-                                                <span lang="zh-TW">啟用3D API，使用 GPU 讓 TREM 跑得更加順暢。
+                                                <span lang="zh-TW">啟用3D API，使用 GPU 讓 TREMV 跑得更加順暢。
                                                     如果你遇到了卡頓、幀數下降的問題，請關閉此功能。</span>
                                             </div>
                                         </div>
@@ -3198,7 +3198,7 @@
                                                 <span lang="kr">?</span>
                                                 <span lang="ru">?</span>
                                                 <span lang="zh-CN">?</span>
-                                                <span lang="zh-TW">啟用睡眠模式，使用 睡眠模式 讓 TREM 跑得更加省流量。
+                                                <span lang="zh-TW">啟用睡眠模式，使用 睡眠模式 讓 TREMV 跑得更加省流量。
                                                     如果你遇到了whes、流量的問題，請開啟此功能(此功能處於測試階段)。</span>
                                             </div>
                                         </div>
@@ -3226,7 +3226,7 @@
                                                 <span lang="kr">?</span>
                                                 <span lang="ru">?</span>
                                                 <span lang="zh-CN">?</span>
-                                                <span lang="zh-TW">啟用P2P模式，使用 P2P模式 讓 TREM 接收P2P模式。
+                                                <span lang="zh-TW">啟用P2P模式，使用 P2P模式 讓 TREMV 接收P2P模式。
                                                     如果你遇到了其他模式斷線的問題，請開啟此功能(此功能處於測試階段)。
                                                     關閉此功能會讓錯誤碼出現5純屬正常。</span>
                                             </div>
@@ -3266,8 +3266,8 @@
                                                 <span lang="kr">?</span>
                                                 <span lang="ru">?</span>
                                                 <span lang="zh-CN">?</span>
-                                                <span lang="zh-TW">啟用直播模式，使用 直播模式 讓 TREM 合乎直播顯示內容。
-                                                    如果你遇到了whes直播、用 TREM 畫面直播的問題，請開啟此功能(此功能處於測試階段)。</span>
+                                                <span lang="zh-TW">啟用直播模式，使用 直播模式 讓 TREMV 合乎直播顯示內容。
+                                                    如果你遇到了whes直播、用 TREMV 畫面直播的問題，請開啟此功能(此功能處於測試階段)。</span>
                                             </div>
                                         </div>
                                         <label class="md3 switch">
@@ -3530,7 +3530,7 @@
                                         <div class="option-label">
                                             <div class="option-label-title">
                                                 <span lang="en">Start with Windows</span>
-                                                <span lang="ja">TREM を開く</span>
+                                                <span lang="ja">TREMV を開く</span>
                                                 <span lang="kr">시작프로그램</span>
                                                 <span lang="ru">Начните с Windows</span>
                                                 <span lang="zh-CN">在 Windows 开机时启动</span>
@@ -3538,12 +3538,12 @@
                                                 <span class="option-label-id">windows.startup</span>
                                             </div>
                                             <div class="option-label-description">
-                                                <span lang="en">Let TREM starts on computer startup.</span>
-                                                <span lang="ja">パソコン起動時に TREM を起動させます。</span>
-                                                <span lang="kr">Windows 시작 시 TREM이 같이 실행됩니다.</span>
-                                                <span lang="ru">Пусть TREM запускается при загрузке компьютера</span>
-                                                <span lang="zh-CN">让 TREM 跟着 Windows 一起启动。</span>
-                                                <span lang="zh-TW">讓 TREM 跟著 Windows 一起啟動。</span>
+                                                <span lang="en">Let TREMV starts on computer startup.</span>
+                                                <span lang="ja">パソコン起動時に TREMV を起動させます。</span>
+                                                <span lang="kr">Windows 시작 시 TREMV이 같이 실행됩니다.</span>
+                                                <span lang="ru">Пусть TREMV запускается при загрузке компьютера</span>
+                                                <span lang="zh-CN">让 TREMV 跟着 Windows 一起启动。</span>
+                                                <span lang="zh-TW">讓 TREMV 跟著 Windows 一起啟動。</span>
                                             </div>
                                         </div>
                                         <label class="md3 switch">
@@ -3565,12 +3565,12 @@
                                                 <span class="option-label-id">windows.minimize</span>
                                             </div>
                                             <div class="option-label-description">
-                                                <span lang="en">Let TREM starts in the background.</span>
-                                                <span lang="ja">TREM をバックグラウンドで起動させます。</span>
-                                                <span lang="kr">TREM이 백그라운드에서 실행됩니다.</span>
-                                                <span lang="ru">Пусть на заднем плане запустится TREM</span>
-                                                <span lang="zh-CN">让 TREM 在后台运行。</span>
-                                                <span lang="zh-TW">讓 TREM 在背景執行。</span>
+                                                <span lang="en">Let TREMV starts in the background.</span>
+                                                <span lang="ja">TREMV をバックグラウンドで起動させます。</span>
+                                                <span lang="kr">TREMV이 백그라운드에서 실행됩니다.</span>
+                                                <span lang="ru">Пусть на заднем плане запустится TREMV</span>
+                                                <span lang="zh-CN">让 TREMV 在后台运行。</span>
+                                                <span lang="zh-TW">讓 TREMV 在背景執行。</span>
                                             </div>
                                         </div>
                                         <label class="md3 switch">
@@ -3592,12 +3592,12 @@
                                                 <span class="option-label-id">windows.tray</span>
                                             </div>
                                             <div class="option-label-description">
-                                                <span lang="en">Let TREM minimize to your system tray when you close the app.</span>
-                                                <span lang="ja">「X」を押すと、アプリを閉じたときに TREM をシステムトレイで休止します。</span>
+                                                <span lang="en">Let TREMV minimize to your system tray when you close the app.</span>
+                                                <span lang="ja">「X」を押すと、アプリを閉じたときに TREMV をシステムトレイで休止します。</span>
                                                 <span lang="kr">"X"를 눌러 닫은 후에도 알림 영역에서 계속 실행됩니다</span>
-                                                <span lang="ru">Позволяет сворачивать TREM в системный трей при закрытии TREM</span>
-                                                <span lang="zh-CN">点击「X」关闭程序后，会使 TREM 于后台运行，并保留在系统托盘中。</span>
-                                                <span lang="zh-TW">按下「X」關閉應用程式後，會讓 TREM 回到背景，留在系統通知區。</span>
+                                                <span lang="ru">Позволяет сворачивать TREMV в системный трей при закрытии TREMV</span>
+                                                <span lang="zh-CN">点击「X」关闭程序后，会使 TREMV 于后台运行，并保留在系统托盘中。</span>
+                                                <span lang="zh-TW">按下「X」關閉應用程式後，會讓 TREMV 回到背景，留在系統通知區。</span>
                                             </div>
                                         </div>
                                         <label class="md3 switch">
@@ -4140,8 +4140,8 @@
                                 </div>
                             </div>
                             <div class="list-container" id="About">
-                                <div class="control-title">Taiwan Real-time Earthquake Monitoring</div>
-                                <div class="external-link" role="link" onclick="openURL('https:\/\/github.com/ExpTechTW/TREM')">GitHub<span class="material-symbols-rounded">open_in_new</span></div>
+                                <div class="control-title">Taiwan Real-time Earthquake Monitoring Variety</div>
+                                <div class="external-link" role="link" onclick="openURL('https:\/\/github.com/yayacat/TREM')">GitHub<span class="material-symbols-rounded">open_in_new</span></div>
                                 <div class="external-link" role="link" onclick="openURL('https:\/\/exptech.com.tw/api/v1/file/exptech/index.html?auto=true&software=trem')">TREM<span class="material-symbols-rounded">open_in_new</span></div>
                                 <div class="external-link" role="link" onclick="openreleases()">Releases<span class="material-symbols-rounded">open_in_new</span></div>
                                 <div class="control-title">更多資訊請見 GitHub 頁面</div>
