--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -1031,6 +1031,33 @@
                                             </span>
                                         </label>
                                     </div>
+                                    <div class="option-container">
+                                        <div class="option-label">
+                                            <span class="option-label-title">
+                                                <span lang="en">Select the websocket source</span>
+                                                <span lang="ja">?</span>
+                                                <span lang="kr">?</span>
+                                                <span lang="ru">?</span>
+                                                <span lang="zh-CN">?</span>
+                                                <span lang="zh-TW">選擇websocket來源</span>
+                                                <span class="option-label-id">Real-time.websocket</span>
+                                            </span>
+                                            <span class="option-label-description">
+                                                <span lang="en">Select the websocket source to display in the overlay.</span>
+                                                <span lang="ja">?</span>
+                                                <span lang="kr">?</span>
+                                                <span lang="ru">?</span>
+                                                <span lang="zh-CN">?</span>
+                                                <span lang="zh-TW">選擇websocket來源顯示在地圖上的即時測站。</span>
+                                            </span>
+                                        </div>
+                                        <div class="control">
+                                            <select id="Real-time.websocket" name="websocket" onchange="SelectSave('Real-time.websocket')">
+                                                <option value="exptech">exptech</option>
+                                                <option value="yayacat">yayacat</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="control-title">
                                     <span lang="en">?</span>
