--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -116,7 +116,7 @@
                         <div class="client-info-container">
                             <div id="client-version"></div>
                             <div id="client-os"></div>
-                            <div id="client-uuid">UUID</div>
+                            <!-- <div id="client-key">key</div> -->
                             <div id="client-license">Licensed under AGPL-3.0</div>
                         </div>
                     </div>
