--- a/TREM.Electron/css/setting.css
+++ b/TREM.Electron/css/setting.css
@@ -132,7 +132,7 @@ body {
     font-weight: 300;
 }
 
-#client-uuid {
+#client-key {
     cursor: help;
     text-decoration: underline rgba(var(--md-sys-color-on-surface-variant), .6) dotted;
 }
