--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -3431,7 +3431,7 @@
                                                 <span lang="zh-TW">使用私有 API 金鑰，你將可以獲得對更多內容的權限，並可避免因使用公共金鑰而受到速率限制。
                                                     私有 API 金鑰可以通過向 ExpTech 提出申請來獲得。</span>
                                             </div>
-                                            <div class="option-label-description" onclick="openURL('https:\/\/exptech.com.tw/api/v1/file/exptech/login.html')">點我前往exptech申請</div>
+                                            <div class="option-label-description" onclick="openURL('https:\/\/api.exptech.com.tw/file/exptech/login.html')">點我前往exptech申請</div>
                                         </div>
                                         <div class="tremkey">
                                             <div class="left">
@@ -3499,7 +3499,7 @@
                                                 <span lang="zh-TW">使用私有 API 金鑰，你將可以獲得對更多內容的權限，並可避免因使用公共金鑰而受到速率限制。
                                                     私有 API 金鑰可以通過向 ExpTech 提出申請來獲得。</span>
                                             </div>
-                                            <div class="option-label-description" onclick="openURL('https:\/\/exptech.com.tw/api/v1/file/exptech/login.html')">點我前往exptech申請</div>
+                                            <div class="option-label-description" onclick="openURL('https:\/\/api.exptech.com.tw/file/exptech/login.html')">點我前往exptech申請</div>
                                         </div>
                                         <div class="tremkey">
                                             <div class="left">
