--- a/TREM.Electron/Views/SettingView.html
+++ b/TREM.Electron/Views/SettingView.html
@@ -282,7 +282,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <button class="filled-tonal-button setting-button md3-ripple" onclick="testEEW()" style="margin-top: 10px;">
+                                    <!-- <button class="filled-tonal-button setting-button md3-ripple" onclick="testEEW()" style="margin-top: 10px;">
                                         <span class="material-symbols-rounded filled-tonal-button-icon">replay</span>
                                         <span class="filled-tonal-button-label">
                                             <span lang="en">Test EEW</span>
@@ -292,7 +292,7 @@
                                             <span lang="zh-CN">测试警报</span>
                                             <span lang="zh-TW">測試警報</span>
                                         </span>
-                                    </button>
+                                    </button> -->
                                 </div>
                                 <div class="control-title">
                                     <span lang="en">Receiving</span>
