--- a/TREM.Electron/Views/MainView.html
+++ b/TREM.Electron/Views/MainView.html
@@ -75,6 +75,9 @@
             <button id="setting_btn" class="nav-rail-button md3-ripple" onclick="openSettingWindow()">
                 <span class="material-symbols-rounded">settings</span>
             </button>
+            <button id="file_btn" class="nav-rail-button md3-ripple" onclick="openFileWindow()">
+                <span class="material-symbols-rounded">folder_open</span>
+            </button>
         </div>
         <div id="view">
             <div class="view main show" id="main">
@@ -415,14 +418,14 @@
                                     </button>
                                 </div>
                                 <div id="report-overview-actions-1">
-                                    <button id="report-replay" class="chip assist md3-ripple" onclick="TREM.Report.replay(this.value)">
+                                    <!-- <button id="report-replay" class="chip assist md3-ripple" onclick="TREM.Report.replay(this.value)">
                                         <span class="chip-icon material-symbols-rounded">replay</span>
                                         <span class="chip-label">
                                             <span lang="en">Replay</span>
                                             <span lang="ja">リプレイ</span>
-                                            <span lang="kr">Replay</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                            <span lang="ru">Replay</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                            <span lang="zh-CN">重播</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="kr">Replay</span>
+                                            <span lang="ru">Replay</span>
+                                            <span lang="zh-CN">重播</span>
                                             <span lang="zh-TW">重播</span>
                                         </span>
                                         <span class="chip-icon material-symbols-rounded"></span>
@@ -432,26 +435,26 @@
                                         <span class="chip-label">
                                             <span lang="en">?</span>
                                             <span lang="ja">?</span>
-                                            <span lang="kr">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                            <span lang="ru">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                            <span lang="zh-CN">?</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="kr">?</span>
+                                            <span lang="ru">?</span>
+                                            <span lang="zh-CN">?</span>
                                             <span id="report-replay-downloader-text" lang="zh-TW">下載</span>
                                         </span>
                                         <span class="chip-icon material-symbols-rounded"></span>
                                         <progress id="downloader_progress" class="progressbar" value="0" max="1" style="display: none;"></progress>
-                                    </button>
-                                    <button id="report-TREM" class="chip assist md3-ripple" onclick="openURL(this.value)">
+                                    </button> -->
+                                    <!-- <button id="report-TREM" class="chip assist md3-ripple" onclick="openURL(this.value)">
                                         <span class="chip-icon material-symbols-rounded">report</span>
                                         <span class="chip-label">
                                             <span lang="en">TREM report</span>
                                             <span lang="ja">TREM report</span>
-                                            <span lang="kr">TREM report</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                            <span lang="ru">TREM report</span> <!-- TODO: Untranslated, remove this comment after translation -->
-                                            <span lang="zh-CN">TREM報告</span> <!-- TODO: Untranslated, remove this comment after translation -->
+                                            <span lang="kr">TREM report</span>
+                                            <span lang="ru">TREM report</span>
+                                            <span lang="zh-CN">TREM報告</span>
                                             <span lang="zh-TW">TREM報告</span>
                                         </span>
                                         <span class="chip-icon material-symbols-rounded"></span>
-                                    </button>
+                                    </button> -->
                                 </div>
                                 <hr class="divider">
                                 <div id="report-overview-body">
